Address PR review feedback: ScopedValue preview note, non-blocking journal, Session naming, strip overflow, CoW snapshot, fallback workspace
Agent-Logs-Url: https://github.com/Ben-Esquivel-Music/java-digital-audio-workstation/sessions/d73a70a2-06b3-4545-af80-8c13f3477e47

Co-authored-by: BenEsquivelMusic <198515647+BenEsquivelMusic@users.noreply.github.com>